--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
   height: 100vh;
-  border:solid red;
   box-sizing: border-box;
   overflow-y: auto;
+  background-color:  rgba(123, 178, 180, 0.713);
 }
 
 .App-logo {
@@ -39,4 +39,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img {
+  max-width: 100%;
+}
+
+table, td, th {
+  border: solid 1px;
+  border-collapse: collapse;
+  padding: 0px 5px;
+}
+
+#preview{
+  padding:1%;
 }
